--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
 }
 
+
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
 tasks.named('test') {
     useJUnitPlatform()
 }
