--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=5000
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/webtoon?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=webtoon
